--- a/vue/src/styles/globalStyles.css
+++ b/vue/src/styles/globalStyles.css
@@ -6,6 +6,28 @@
     margin: 0!important;
 }
 
+.bg-color {
+    background-color: #0844a4!important;
+}
+
+.flex-centered {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.flex-row {
+    flex-direction: row!important;
+}
+
+.flex-col {
+    flex-direction: column!important;
+}
+
+.white-text {
+    color: white;
+}
+
 ::-webkit-scrollbar {
     width: 14px!important;
     height: 14px!important;
