employee availability work in progress

--- a/vue/src/styles/globalStyles.css
+++ b/vue/src/styles/globalStyles.css
@@ -28,6 +28,10 @@
     color: white;
 }
 
+.d-flex{
+    display: flex!important;
+}
+
 ::-webkit-scrollbar {
     width: 14px!important;
     height: 14px!important;
