--- a/vue/src/styles/globalStyles.css
+++ b/vue/src/styles/globalStyles.css
@@ -32,6 +32,14 @@
     display: flex!important;
 }
 
+.justify-end {
+    justify-content: end!important;
+}
+
+.align-center {
+    align-items: center;
+}
+
 ::-webkit-scrollbar {
     width: 14px!important;
     height: 14px!important;
