working on employee availability

--- a/vue/src/styles/globalStyles.css
+++ b/vue/src/styles/globalStyles.css
@@ -28,6 +28,10 @@
     color: white;
 }
 
+input[type="time"]::-webkit-calendar-picker-indicator{
+    filter: invert(100%);
+}
+
 .d-flex{
     display: flex!important;
 }
