--- a/Salon/templates/authentication/employee_credentials.html
+++ b/Salon/templates/authentication/employee_credentials.html
@@ -11,7 +11,7 @@
                 Login: {{user}}
                 Password: {{password}}
                 <a
-                    
+                    href="http://localhost:8080/employee/"
                 >
                     klik
                 </a>
