refactored styles for login and registration of employee and owner

--- a/vue/src/styles/globalStyles.css
+++ b/vue/src/styles/globalStyles.css
@@ -32,6 +32,10 @@ input[type="time"]::-webkit-calendar-picker-indicator{
     filter: invert(100%);
 }
 
+.font-bold{
+    font-weight: bold!important;
+}
+
 
 .d-flex{
     display: flex!important;
