--- a/Salon/templates/authentication/employee_credentials.html
+++ b/Salon/templates/authentication/employee_credentials.html
@@ -1,21 +1,73 @@
 <!DOCTYPE html>
 <html>
-    <head>
-    </head>
-    <body>
-        <div>
-            <h1 style="background-color: blue; color: white">
-                Hi {{user}}
+    <body style="font-family: Roboto;">
+        <div 
+            style="
+                background-color: rgb(63, 81, 181); 
+                min-height: 80px;
+                display: flex;
+                justify-content: center;
+                width: 100%;
+                color: white!important;
+                padding-right: 8px;
+                padding-left: 8px;
+            "
+        >
+            <h1>
+                Salon Kosmetyczny App
             </h1>
-            <p>
-                Login: {{user}}
-                Password: {{password}}
+        </div>
+        <div style="background-color: #0844a4; color: white!important; padding: 8px; font-size: 18px;">
+            <div 
+                style="
+                    width: 100%;
+                "
+            >
+                <span> Witaj <b>{{ full_name }}!</b> </span>
+            </div>
+            <div 
+                style="
+                    width: 100%;
+                "
+            >
+                <span>Poniżej znajdziesz swoje dane do zalogowania.</span>
+            </div>
+            <br>
+            <div 
+                style="
+                    width: 100%;
+                "
+            >
+                <span><b>Login:</b> {{user}}</span>
+            </div>
+            <div 
+                style="
+                    width: 100%;
+                "
+            >
+                <span><b>Hasło:</b> {{password}}</span>
+            </div>
+            <div style="margin-top: 8px; width: 100%;">
                 <a
+
                     href="http://localhost:8080/employee/"
                 >
-                    klik
+                    <button
+                        style="
+                            background-color: rgb(140, 158, 255);
+                            color: white; 
+                            height: 36px;
+                            min-width: 64px;
+                            padding: 0 16px;
+                            border: none!important;
+                            cursor: pointer;
+			    font-weight: bold;
+                        "
+                    >
+                        Przejdź do logowania
+                    </button>
                 </a>
-            </p>
+            </div>
         </div>
     </body>
 </html>
