--- a/Salon/templates/authentication/request_passwordchange.html
+++ b/Salon/templates/authentication/request_passwordchange.html
@@ -1,6 +1,59 @@
-{% autoescape off %}
-    Hi {{user}}
-    Please use the link below to access password reset form.
+<!DOCTYPE html>
+<html>
+    <body style="font-family: Roboto;">
+        <div 
+            style="
+                background-color: rgb(63, 81, 181); 
+                min-height: 80px;
+                display: flex;
+                justify-content: center;
+                width: 100%;
+                color: white!important;
+                padding-right: 8px;
+                padding-left: 8px;
+            "
+        >
+            <h1>
+                Salon Kosmetyczny App
+            </h1>
+        </div>
+        <div style="background-color: #0844a4; color: white!important; padding: 8px; font-size: 18px;">
+            <div 
+                style="
+                    width: 100%;
+                "
+            >
+                <span> Witaj <b>{{ user }}!</b> </span>
+            </div>
+            <div 
+                style="
+                    width: 100%;
+                "
+            >
+                <span>Kliknij przycisk poniżej aby zresetować hasło.</span>
+            </div>
+            <div style="margin-top: 8px; width: 100%;">
+                <a
 
-    http:://{{domain}}{% url 'check_reset_token' uidb64=uid token=token %}
-{% endautoescape %}
+                    href="http://{{domain}}{% url 'check_reset_token' uidb64=uid token=token %}"
+                >
+                    <button
+                        style="
+                            background-color: rgb(140, 158, 255);
+                            color: white; 
+                            height: 36px;
+                            min-width: 64px;
+                            padding: 0 16px;
+                            border: none!important;
+                            cursor: pointer;
+			    font-weight: bold;
+
+                        "
+                    >
+                        Zresetuj hasło
+                    </button>
+                </a>
+            </div>
+        </div>
+    </body>
+</html>
